# j3Pic

./: README.md
src/: Cargo.toml  THIRD_PARTY_NOTICES.txt  about.txt  build.rs  build_release.py  clippy.toml
src/docs/: domain.md  linux-gtk4-parity.md  performance.md  regression-checklist.md  win32-verification.md
src/src/: about.rs  app.rs  domain.rs  infra.rs  lib.rs  main.rs  ui_text.rs
src/src/infra/: config_store.rs
src/src/platform/: about_dialog.rs  export_options_dialog.rs  linux.rs  mod.rs  settings_dialog.rs  win32.rs
src/src/platform/win32/: dpi.rs
